--- a/Practical1/lab1_medical_databases.rmd
+++ b/Practical1/lab1_medical_databases.rmd
@@ -31,16 +31,40 @@ The data required is available via the [course website](https://github.com/magui
 
 **1** Use the data dictionary describe each of the variables/features in the CSV in your report.
 
+# Data Dictionary
+#PatientID: Unique identifier for each patient 
+#AppointmentID: Unique identifier to each appointment 
+#Gender: Patient Gender (limited to Male or Female)
+#ScheduledDate: date on which the appointment was scheduled
+#AppointmentDate: date of the actual appointment
+#Age: Patient age
+#Neighbourhood: District of Vitória in which the appointment 
+#SocialWelfare: Patient is a recipient of Bolsa Família welfare payments
+#Hypertension: Patient previously diagnoised with hypertensio (Boolean)
+#Diabetes: Patient previously diagnosed with diabetes (Boolean)
+#AlcoholUseDisorder: Patient previously diagnosed with alcohol use disorder (Boolean)
+#Disability: Patient previously diagnosed with a disability (severity rated 0-4)
+#SMSReceived: At least 1 reminder text sent before appointment (Boolean)
+#NoShow: Patient did not attend scheduled appointment (Boolean: Yes/No)
+
 **2** Can you think of 3 hypotheses for why someone may be more likely to miss a medical appointment?
 
-**3** Can you provide 3 examples of important contextual information that is missing in this data dictionary and dataset that could impact your analyses e.g., what type of medical appointment does each `AppointmentID` refer to?  
+#1- Missing sms reminder messages.
+#2- Miscalculating the trip's duration
+#3- Emergency priorotizing varies between children and adults, where children are careless and more likely to miss an appointment.
+
+**3** Can you provide 3 examples of important contextual information that is missing in this data dictionary and dataset that could impact your analyses e.g., what type of medical appointment does each `AppointmentID` refer to? 
+
+#1- Distance from each neighborhood
+#2- Weather on the appointment day
+#3- How long before the appointment the SMS reminder was sent
 
 ## Data Parsing and Cleaning
 
 **4** Modify the following to make it reproducible i.e., downloads the data file directly from version control
 
 ```{r parse}
-raw.data <- read_csv('lab1_data/2016_05v2_VitoriaAppointmentData.csv', col_types='fffTTifllllflf')
+raw.data <- read_csv('2016_05v2_VitoriaAppointmentData.csv',col_types='fffTTifllllflf')
 #raw.data <- readr::read_csv('https://raw.githubusercontent.com/maguire-lab/health_data_science_research_2025/ ... ')
 ```
 
@@ -52,7 +76,20 @@ raw.data %>% filter(Age > 110)
 We can see there are 2 patient's older than 110 which seems suspicious but we can't actually say if this is impossible.
 
 **5** Are there any individuals with impossible ages? If so we can drop this row using `filter` i.e., `data <- data %>% filter(CRITERIA)`
+#chekig impossible ages (below 0 and above 110)
+```{r}
+raw.data %>% filter(Age< 0 | Age > 110)
+```
 
+#dropping 6 rows, 5 above 110 (115yrs old) and 1 below 0(-1)
+```{r}
+raw.data <- raw.data %>% filter(Age >=0 & Age <=110)
+```
+
+#making sure patients with the age 0 are still there
+```{r}
+raw.data %>% filter(Age== 0)
+```
 ## Exploratory Data Analysis
 First, we should get an idea if the data meets our expectations, there are newborns in the data (`Age==0`) and we wouldn't expect any of these to be diagnosed with Diabetes, Alcohol Use Disorder, and Hypertension (although in theory it could be possible).  We can easily check this:
 
@@ -66,7 +103,10 @@ We can also explore things like how many different neighborhoods are there and h
 count(raw.data, Neighbourhood, sort = TRUE)
 ```
 **6** What is the maximum number of appointments from the same patient?
-
+```{r}
+count(raw.data, PatientID, sort = TRUE) %>% head(1)
+```
+# the maximum appoinments number from the same patient is 88.
 
 Let's explore the correlation between variables:
 
@@ -132,9 +172,28 @@ In this case, we are particularly interested in relationships between `NoShow` a
 
 **7** Which parameters most strongly correlate with missing appointments (`NoShow`)?
 
+# showing parameter that has more than 0.1 correlation with (NoShow)
+```{r}
+round(cor(numeric.data)[cor(numeric.data) [ ,"NoShow"] > 0.1,"NoShow"] ,2)
+```
+#SMSRecieved(0.13) and itself(1.00)
+
 **8** Are there any other variables which strongly correlate with one another?
 
+# displaying parameter that has more that 0.5 correlation with one another
+```{r}
+cm_raw <- round(cor(numeric.data), 2)
+get_upper_tri <- function(m) { m[lower.tri(m)] <- NA; m }
+
+melt(get_upper_tri(cm_raw), na.rm = TRUE) %>%
+  filter(value > 0.5, Var1 != Var2)
+```
+
+#PatientID and AppointmentID(0.65), AppointmentID and AppointmentDate(0.61), ScheduledDate and AppointmentDate (0.61)
+
 **9** Do you see any issues with PatientID/AppointmentID being included in this plot? 
+
+#Yes, they are both useless in this relationships chars, it doesnt have any effect.
 
 Let's look at some individual variables and their relationship with `NoShow`.
 
@@ -163,6 +222,8 @@ ggplot(raw.data) +
 
 **10** How could you be misled if you only plotted 1 of these 2 plots of attendance by age group?
 
+#bcause the first chart shows the count where some age groups have higher appointments which will show as a peak, where the on the other hand, it shows the proportion shows small bars for old ages which might mislead for a higher (no show) when in fact this group is small.
+
 The key takeaway from this is that  number of individuals > 90 are very few from plot 1 so probably are very small so unlikely to make much of an impact on the overall distributions. 
 However, other patterns do emerge such as 10-20 age group is nearly twice as likely to miss appointments as the 60-70 years old.
 
@@ -181,10 +242,18 @@ ggplot(raw.data) +
 
 **11** From this plot does it look like SMS reminders increase or decrease the chance of someone not attending an appointment? Why might the opposite actually be true (hint: think about biases)? 
 
+#The plot shows that the sms reminder decreases the show ups, because the text might be a 15 minutes reminder before the appointment when the patient hasnt already showed up (and wasnt going to), so the SMS remminders are basically for the one who didnt show up.
+
 **12** Create a similar plot which compares the the density of `NoShow` across the values of disability 
 
 ```{r}
-#Insert plot
+ggplot(raw.data) + 
+  geom_bar(aes(x=Disability, fill=NoShow), alpha=0.8) + 
+  ggtitle("Attendance by Disability")
+
+ggplot(raw.data) + 
+  geom_bar(aes(x=Disability, fill=NoShow), position='fill', alpha=0.8) + 
+  ggtitle("Proportion Attendance by Disability")
 ```
 
 Now let's look at the neighbourhood data as location can correlate highly with many social determinants of health. 
@@ -206,6 +275,8 @@ Most neighborhoods have similar proportions of no-show but some have much higher
 
 **13** Suggest a reason for differences in attendance rates across neighbourhoods.
 
+#Traffic, road constructions, distanse and transportiation might affect the attendance rates.
+
 Now let's explore the relationship between gender and NoShow.
 ```{r, fig.align="center"}
 ggplot(raw.data) + 
@@ -221,7 +292,13 @@ ggplot(raw.data) +
 **14** Create a similar plot using `SocialWelfare`
 
 ```{r ,fig.align="center"}
-#Insert plot
+ggplot(raw.data) + 
+  geom_bar(aes(x=SocialWelfare, fill=NoShow))+
+  ggtitle("Social Welfare by attendance")
+
+ggplot(raw.data) + 
+  geom_bar(aes(x=SocialWelfare, fill=NoShow), position='fill')+
+  ggtitle("Proportion Social Welfare by attendance")
 
 ```
 
@@ -259,6 +336,8 @@ ggplot(raw.data) +
 
 **15** Have a look at the values in lag variable, does anything seem odd?
 
+#Yes, its peak was a negative number and zero, and the density reached 0 at day 50 and lasted more than a 100 days.
+
 ## Predictive Modeling
 
 Let's see how well we can predict NoShow from the data. 
@@ -284,6 +363,8 @@ fit.control <- trainControl(method="cv",number=3,
 ```
 
 **16** Based on the EDA, how well do you think this is going to work?
+
+#Based on the data analysis, there were weak data to base on anything, there were hardly any connections with (no show) except for a few whcih is not worth the EDA.
 
 Now we can train our XGBoost model
 ```{r}
@@ -340,7 +421,21 @@ ggplot(results, aes(x=Feature, y=Importance,fill=Importance))+
 
 **17** Using the [caret package](https://topepo.github.io/caret/) fit and evaluate 1 other ML model on this data.
 
+#training lgm (logestic regression)
+```{r}
+glm.model <- train(NoShow ~ .,data=train, method="glm", family = "binomial", metric="ROC", trControl=fit.control)
+
+glm.pred <- predict(glm.model, newdata=test)
+glm.probs <- predict(glm.model, newdata=test, type="prob")
+
+confusionMatrix(glm.pred, test$NoShow, positive="Yes")
+paste("GLM AUC:", round(auc(test$NoShow.numerical, glm.probs$Yes), 3))
+```
+
+
 **18** Based on everything, do you think we can trust analyses based on this dataset? Explain your reasoning.
+
+#not really, the data has very weak correlations with patients showing up, and for GLM AUC was 0.66 and for XGBoost the AUC is 0.73. Also the SMS reminders were most likely sent to people who wasnt going to show up. Also the Lag variables had negative numbers and were inactive for more than a 100 days. So the it is unreliable.
 
 ## Credits
 
